--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "iconv": "^3.0.1",
     "node-html-parser": "^6.1.13",
     "typescript": "^4.0.2",
-    "waitasecond": "^1.6.0"
+    "waitasecond": "^1.6.0",
+    "ts-node": "^1.1.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
