--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "@types/iconv": "^3.0.4",
     "@types/node": "^14.10.1",
     "ts-node-dev": "^1.1.8"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
