Fixed showing alergens instead of menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
     },
     "i18n-ally.localesPaths": ["src/translations"],
     "i18n-ally.keystyle": "nested",
-    "i18n-ally.sourceLanguage": "cs"
+    "i18n-ally.sourceLanguage": "cs",
+    "postman.settings.dotenv-detection-notification-visibility": false
 }
