--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.7",
-    "discord.js": "^14.16.2",
+    "discord.js": "^14.25.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^4.5.0",
     "iconv": "^3.0.1",
     "node-html-parser": "^6.1.13",
+    "ts-node": "^1.1.8",
     "typescript": "^4.0.2",
-    "waitasecond": "^1.6.0",
-    "ts-node": "^1.1.8"
+    "waitasecond": "^1.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
