--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fast-xml-parser": "^4.5.0",
     "iconv": "^3.0.1",
     "node-html-parser": "^6.1.13",
+    "sqlite3": "^5.1.7",
     "ts-node": "^1.1.8",
     "typescript": "^4.0.2",
     "waitasecond": "^1.6.0"
